--- a/GanttProjectDotNet/GanttProjectDotNet.csproj
+++ b/GanttProjectDotNet/GanttProjectDotNet.csproj
@@ -43,6 +43,8 @@
   <ItemGroup>
     <Compile Include="Constants.cs" />
     <Compile Include="IO\GantXMLOpen.cs" />
+    <Compile Include="Models\Xml\CData.cs" />
+    <Compile Include="Models\Xml\GanttProject.cs" />
     <Compile Include="Models\UIFacade.cs" />
     <Compile Include="Models\WeekendCalendar.cs" />
     <Compile Include="Models\GanttGraphicArea.cs" />
@@ -51,6 +53,7 @@
     <Compile Include="Models\TaskTreeUIFacade.cs" />
     <Compile Include="IO\GanttXMLSaver.cs" />
     <Compile Include="IO\SaverBase.cs" />
+    <Compile Include="Models\Xml\TasksNode.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="XElementExtensions.cs" />
   </ItemGroup>
