--- a/GanttProjectDotNet/GanttProjectDotNet.csproj
+++ b/GanttProjectDotNet/GanttProjectDotNet.csproj
@@ -43,7 +43,11 @@
   <ItemGroup>
     <Compile Include="Constants.cs" />
     <Compile Include="IO\GantXMLOpen.cs" />
+    <Compile Include="Models\Xml\Calendars.cs" />
     <Compile Include="Models\Xml\CData.cs" />
+    <Compile Include="Models\Xml\DayType.cs" />
+    <Compile Include="Models\Xml\DayTypes.cs" />
+    <Compile Include="Models\Xml\DefaultWeek.cs" />
     <Compile Include="Models\Xml\GanttProject.cs" />
     <Compile Include="Models\UIFacade.cs" />
     <Compile Include="Models\WeekendCalendar.cs" />
@@ -53,6 +57,7 @@
     <Compile Include="Models\TaskTreeUIFacade.cs" />
     <Compile Include="IO\GanttXMLSaver.cs" />
     <Compile Include="IO\SaverBase.cs" />
+    <Compile Include="Models\Xml\OnlyShowWeekends.cs" />
     <Compile Include="Models\Xml\TasksNode.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="XElementExtensions.cs" />
